# rust-lecture-examples

./: Cargo.toml  README.md
examples/: basics.rs  collections.rs  dynamic-dispatch-benchmark.rs  errors.rs  functions.rs  lifetime.rs  ownership.rs  smart-pointers.rs  static-dispatch-benchmark.rs  structures.rs
